@@ -100,7 +100,7 @@ class NoteModel(BaseModel):
         return unicode(str(temp))
     
     def column_preview(self,data):
-        note = " ".join(data[2].split())
+        note = " ".join(data[2].encode('utf-8').split())
         note = re.sub(r'(<.*?>)', '', note)
         note = note.replace('&amp;', '&')
         note = note.replace('&lt;', '<')
