@@ -115,10 +115,13 @@ class ChildEmbedList(EmbeddedList):
 
     def get_popup_menu_items(self):
         return [
+            (False, True,  (gtk.STOCK_EDIT, _('Edit child')), 
+                                            self.edit_child_button_clicked),
             (True, True, gtk.STOCK_ADD, self.add_button_clicked),
-            (True, False, _('Add an existing child'), self.share_button_clicked),
-            (False,True,  _('Edit relationship'), self.edit_button_clicked),
-            (False,True,  _('Edit child'), self.edit_child_button_clicked),
+            (True, False, _('Add an existing child'), 
+                                            self.share_button_clicked),
+            (False, True,  (gtk.STOCK_EDIT, _('Edit relationship')), 
+                                            self.edit_button_clicked),
             (True, True, gtk.STOCK_REMOVE, self.del_button_clicked),
             ]
 
